updating slide for typo

--- a/Python_slides.html
+++ b/Python_slides.html
@@ -14892,7 +14892,7 @@ more): <a href="https://github.com/perfxweb/python-workshop-2022-11-09">https://
 <ul>
 <li>Where to look for code</li>
 <li>How to avoid common mistakes</li>
-<li>Intro into working with local computer files, Excel and APIs</li>
+<li>Intro into working with local computer files, APIs and more</li>
 </ul>
 
 </div>
@@ -17140,7 +17140,7 @@ Variable &#39;person&#39; has a name and an age set!
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[27]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">person</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;name&#39;</span><span class="p">:</span><span class="s1">&#39;Karen&#39;</span><span class="p">,</span> <span class="s1">&#39;age&#39;</span><span class="p">:</span><span class="mi">24</span><span class="p">,</span> <span class="s1">&#39;programming_grade&#39;</span><span class="p">:</span><span class="mi">1</span><span class="p">}</span>
@@ -17149,7 +17149,7 @@ Variable &#39;person&#39; has a name and an age set!
   <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person is over 18.&quot;</span><span class="p">)</span>
 
   <span class="k">if</span> <span class="n">person</span><span class="p">[</span><span class="s1">&#39;programming_grade&#39;</span><span class="p">]</span><span class="o">&lt;</span><span class="mi">3</span><span class="p">:</span>
-    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person&#39;s programming grade is lower than 2.&quot;</span><span class="p">)</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person&#39;s programming grade is lower than 3.&quot;</span><span class="p">)</span>
   
   <span class="k">else</span><span class="p">:</span>
     <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Programming grade is higher than 2.&quot;</span><span class="p">)</span>
@@ -17176,7 +17176,7 @@ Variable &#39;person&#39; has a name and an age set!
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Person is over 18.
-Person&#39;s programming grade is lower than 2.
+Person&#39;s programming grade is lower than 3.
 </pre>
 </div>
 </div>
@@ -17202,7 +17202,7 @@ Person&#39;s programming grade is lower than 2.
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[28]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">person</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;name&#39;</span><span class="p">:</span><span class="s1">&#39;Karen&#39;</span><span class="p">,</span> <span class="s1">&#39;age&#39;</span><span class="p">:</span><span class="mi">24</span><span class="p">,</span> <span class="s1">&#39;programming_grade&#39;</span><span class="p">:</span><span class="mi">1</span><span class="p">}</span>
@@ -17211,7 +17211,7 @@ Person&#39;s programming grade is lower than 2.
   <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person is over 18.&quot;</span><span class="p">)</span>
 
   <span class="k">if</span> <span class="n">person</span><span class="p">[</span><span class="s1">&#39;programming_grade&#39;</span><span class="p">]</span><span class="o">&lt;</span><span class="mi">3</span><span class="p">:</span>
-    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person programming grade is lower than 2.&quot;</span><span class="p">)</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Person programming grade is lower than 3.&quot;</span><span class="p">)</span>
 
     <span class="k">if</span> <span class="n">person</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">]</span><span class="o">==</span><span class="s2">&quot;Karen&quot;</span><span class="p">:</span>
       <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;And the person&#39;s name is Karen&quot;</span><span class="p">)</span>
@@ -17243,7 +17243,7 @@ Person&#39;s programming grade is lower than 2.
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Person is over 18.
-Person programming grade is lower than 2.
+Person programming grade is lower than 3.
 And the person&#39;s name is Karen
 </pre>
 </div>
